# ynab-itemized

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MIGRATION.md  Makefile  README.md  alembic.ini  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 64fa28c8949c_initial_schema.py
scripts/: setup-unix.sh  setup-windows.ps1
src/ynab_itemized/: __init__.py  cli.py  config.py
src/ynab_itemized/database/: __init__.py  manager.py  models.py
src/ynab_itemized/integrations/: __init__.py  amazon.py  base.py
src/ynab_itemized/models/: __init__.py  base.py  transaction.py
src/ynab_itemized/services/: matching.py  subtransaction.py
src/ynab_itemized/utils/: __init__.py  formatting.py  validation.py
src/ynab_itemized/ynab/: __init__.py  client.py  exceptions.py
tests/: TEST_SUMMARY.md  __init__.py  conftest.py
tests/fixtures/: amazon_sample.csv
tests/integration/: __init__.py  test_subtransaction_workflow.py
tests/unit/: __init__.py  test_amazon_integration.py  test_cli_import_amazon.py  test_cli_subtransactions.py  test_database.py  test_database_subtransactions.py  test_models.py  test_store_integration_base.py  test_subtransaction_service.py  test_subtransactions.py  test_ynab_client_subtransactions.py
